--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,7 +14,7 @@
 <body>
     <div class="main-content">
      {{>header}}
-      <h1>It's about</h1>
+      <p>hi....,I'm Suraj Dhotre.</p>
     </div>
     {{>footer}}
 </body>
